--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
   <!-- Put CSS Link here!-->
-  <title>CSS Practice</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
+  <title class= class1>CSS Practice</title>
 </head>
-<body>
+<body background= "https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/OVoiMR9/videoblocks-listing-programming-code-running-a-computer-screen_b4uay93gb_thumbnail-full14.png">
+  
 	<div id="title-section">
-    <h1>The Ultimate CSS Walkthrough</h1>
+    <h1 class= class1>The Ultimate CSS Walkthrough</h1>
     <h2>An Introduction to Cascading Style Sheets</h2>
   </div>
   <hr>
